--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "xpath": "^0.0.34"
   },
   "devDependencies": {
-    "cypress-xpath": "^2.0.1"
+    "cypress-xpath": "^2.0.1",
+    "typescript": "^5.7.3"
   }
 }
